# sup-xml

./: .gitignore  AGENTS.md  CLAUDE.md  COMPARISON.md  CONTRIBUTING.md  Cargo.toml  FUZZING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  VERIFICATION.md
crates/api/: Cargo.toml  README.md
crates/api/examples/: atto002_smoke.rs  pretty_audit.rs  xsd_smoke.rs
crates/api/src/: async_io.rs  de.rs  lib.rs
crates/api/src/de/: deserializer.rs
crates/api/tests/: adopt.rs  attacks.rs  de.rs  docs_examples.rs  dtd.rs  encoding.rs  eol_normalization.rs  namespace.rs  parse_fixtures.rs  qt3.rs  recovery.rs  roundtrip.rs  threading.rs  unusual.rs  w3c.rs  xml_1_1.rs  xml_id.rs  xpath.rs  xsd_attacks.rs  xsd_real_world.rs  xsd_validate_doc.rs  xsd_wildcard_notqname.rs  xsts.rs
crates/bench/: Cargo.toml  build.rs  expat_shim.c  pugixml_shim.cc
crates/bench/benches/: anyxml_fixture_check.rs  diagnostic_quality.rs  event_counts.rs  exslt_head_to_head.rs  head_to_head.rs  html_parse.rs  in_place_check.rs  in_place_vs_expat.rs  libxml2_recovery_inspector.rs  mini.rs  options_audit.rs  parse.rs  profile_1831893.rs  profile_arena_only.rs  profile_arena_xpath.rs  profile_gazali.rs  profile_in_place.rs  profile_swiss_prot.rs  profile_swiss_prot_mimalloc.rs  profile_xsd_compile.rs  profile_xsd_validate_customer.rs  profile_xsd_validate_hr.rs  qxml_attr_validation_check.rs  recovery_check.rs  skips_max.rs  stream.rs  stream_libxml2.rs  symbol_audit.rs  text_validation_check.rs  validation.rs  xmlts_compliance.rs  xpath_compliance.rs  xpath_libxml2_corpus.rs  xsd.rs  xsd_regex.rs  xsts11_compliance.rs  xsts_compliance.rs
crates/bench/examples/: perf_numeric.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/cli/tests/: cli.rs
crates/cli/tests/fixtures/: license.cert
crates/compat/: Cargo.toml  build.rs
crates/compat/c-tests/: README.md  t-attr-01.c  t-attr-05.c  t-err-01.c  t-err-02.c  t-err-03.c  t-layout-03.c  t-layout-04.c  t-libxml2-headers.c  t-link-01.c  t-link-02.c  t-link-03.c  t-mem-02.c  t-mem-03.c  t-ns-01.c  t-ns-03.c  t-parse-01.c  t-parse-06.c  t-parse-11.c  t-recover-01.c  t-save-01.c  t-ser-01.c  t-ser-02.c  t-upstream-layout.c  t-walk-02.c  t-walk-03.c  t-walk-04.c  t-walk-06.c
crates/compat/c-tests/expected/: t-attr-01.txt  t-attr-05.txt  t-err-01.txt  t-err-02.txt  t-err-03.txt  t-layout-03.txt  t-layout-04.txt  t-libxml2-headers.txt  t-link-01.txt  t-link-02.txt  t-link-03.txt  t-mem-02.txt  t-mem-03.txt  t-ns-01.txt  t-ns-03.txt  t-parse-01.txt  t-parse-06.txt  t-parse-11.txt  t-recover-01.txt  t-save-01.txt  t-ser-01.txt  t-ser-02.txt  t-upstream-layout.txt  t-walk-02.txt  t-walk-03.txt  t-walk-04.txt  t-walk-06.txt
crates/compat/fuzz/: Cargo.toml
crates/compat/fuzz/corpus/fuzz_build_uri/: 002_absolute  003_rel_against_http_base  004_dot_dot_segments  005_multibyte_rel_mailto_base  006_empty_rel  007_authority_only  008_ipv6  009_percent_encoded
crates/compat/fuzz/fuzz_targets/: fuzz_build_uri.rs
crates/compat/src/: alloc.rs  attr.rs  c14n.rs  charclass.rs  dict.rs  dtd.rs  dtddecl.rs  dynsym.rs  encoding.rs  error.rs  exslt.rs  hash.rs  html.rs  idindex.rs  init.rs  input_callbacks.rs  lib.rs  misc.rs  mutate.rs  mutex.rs  nodeacc.rs  ns.rs  outbuf.rs  parse.rs  parsectx.rs  pattern.rs  perl_stubs.rs  php_stubs.rs  pushincr.rs  pushparse.rs  rawfd.rs  reader.rs  regex.rs  relaxng.rs  save.rs  saxreplay.rs  serialize.rs  strutil.rs  stubs.rs  symbols.ld  (+8 more)
crates/compat/tests/: abi.rs  allocator_symmetry.rs
crates/core/: Cargo.toml  README.md
crates/core/examples/: probe_parser_rss.rs  probe_re.rs  profile_xpath_slow_unit.rs
crates/core/fuzz/: .gitignore  Cargo.toml  README.md
crates/core/fuzz/corpus/fuzz_parse_xpath/: 004_pred_attr  005_pred_and_pos  006_last  007_union  008_namespace_axis  010_nested_funcs  011_substring  013_var_qname  014_axis_node  015_axis_pred  019_numbers  021_node_tests  022_pi_with_arg  023_unicode_names  024_strings  025_multi_pred  026_deep_path  027_deep_parens  028_bool  029_arith  (+7 more)
crates/core/fuzz/fuzz_targets/: fuzz_parse_xpath.rs  fuzz_xpath_eval.rs  fuzz_xsd_compile.rs  fuzz_xsd_validate.rs
crates/core/src/: canonical.rs  catalog.rs  charsets.rs  encoding.rs  entity_resolver.rs  error.rs  iterparse.rs  lib.rs  license_gate.rs  ns_helpers.rs  options.rs  output.rs  parser.rs  reader.rs  relaxng.rs  scanner.rs  selector.rs  serializer.rs  stream_parser.rs  streaming_reader.rs  types.rs  xinclude.rs  xml_bytes_reader.rs
crates/core/src/dtd/: inject.rs  mod.rs  model.rs  validate.rs
crates/core/src/html/: encoding.rs  events.rs  mod.rs  options.rs  sink.rs  stream.rs
crates/core/src/regex/: class.rs  linear.rs  mod.rs  nfa.rs  parser.rs  unicode.rs  vm.rs
crates/core/src/xpath/: ast.rs  bindings_builder.rs  context.rs  eval.rs  index.rs  lexer.rs  mod.rs  parser.rs  pattern.rs  rtf.rs
crates/core/src/xsd/: SPEC_DIVERGENCES.md  assertion.rs  datetime.rs  dfa.rs  error.rs  facets.rs  identity.rs  lexical.rs  mod.rs  parser.rs  particle_restriction.rs  resolver.rs  schema.rs  types.rs  validate.rs  whitespace.rs
crates/core/tests/: license_gate.rs
crates/license/: Cargo.toml
crates/license/examples/: generate_keypair.rs
crates/license/src/: lib.rs
crates/license/tests/: certificate_files.rs  cross_language.rs
crates/license/tests/fixtures/: issuer_signed_token.txt  tampered_certificate.cert
crates/tree/: Cargo.toml  README.md
crates/tree/src/: dict.rs  dom.rs  lib.rs
crates/xslt/: Cargo.toml  README.md
crates/xslt/examples/: compile_file.rs  full_iso_pipeline.rs  iae_only.rs  identity_test.rs  iso_pipeline_with_imports.rs  run_init_template.rs  run_iso_pipeline.rs  run_mode_test.rs  run_test.rs
crates/xslt/src/: ast.rs  compiler.rs  error.rs  eval.rs  extensions.rs  format_number.rs  functions.rs  lib.rs  loader.rs  number.rs  output.rs  pattern.rs  result_tree.rs  schematron.rs  sort.rs  walk.rs  whitespace.rs
crates/xslt/tests/: compiler.rs  e2e.rs  eval.rs  extensions.rs  integration.rs  known_unsupported.rs  schema_aware.rs  schematron.rs  xslt30.rs
(+224 files in other folders)
